# HMI_sample

./: BatteryGauge.qml  CMakeLists.txt  CMakeLists.txt.user.e8edd45  CpuGauge.qml  DiskGauge.qml  HWstatus.qml  LibuvFileExporter.cpp  LibuvFileExporter.h  Main.qml  MemoryGauge.qml  Page2.qml  Page3.qml  Page4.qml  Page5.qml  README.md  WifiGauge.qml  appguard.cpp  appguard.h  batterymonitor.cpp  batterymonitor.h  cpumonitor.cpp  cpumonitor.h  disable_watchdog.bat  diskmonitor.cpp  diskmonitor.h  fastapi_server.py  generate_onnx_model.py  graph.qml  hardwarestatusmodel.cpp  hardwarestatusmodel.h  loggingdecorator.cpp  loggingdecorator.h  main.cpp  memorymonitor.cpp  memorymonitor.h  osfilemanager.cpp  osfilemanager.h  pagemanager.cpp  pagemanager.h  popup.qml  (+14 more)
